settings: Add field for automatic theme detection
With this commit:
- Add a new boolean field `theme_detection` in `UserProfile` model in
  order to create the possibility to provide the user with automatic
  detection of its operating system's color preference.
- Add class `dark-preference-checker` in `night_mode.scss` to make use
  of the `prefers-color-scheme` media query for the above purpose.
- Add condition in `base.html` in order to apply the correct class
  according to the values of the `theme_detection` and `night_mode`
  variables in the database
- Add respective field in `test_home.py`

Co-authored-by: @kPerikou <44238834+kPerikou@users.noreply.github.com>

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -697,3 +697,9 @@ on a dark background, and don't change the dark labels dark either. */
         background-color: hsla(0, 0%, 0%, 0.2);
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .dark-preference-checker {
+        @extend body.night-mode;
+    }
+}
