settings: Add checkbox for the `theme_detection` display setting
With this commit:
- Modify `settings_config.js` and `settings.js` in order to create the
  checkbox for the `theme_detection` setting.
- Modify `settings_checkbox.hbs` and `display_settings.hbs` in order to
  prevent the user from modifying the `night_mode` setting when the
  `theme_detection` setting is enabled.
- Modify `settings_display.js` in order to update the database and the
  UI according to the checkbox change.
- Add appropriate functions in `server_events_dispatch.js` and
  `night_mode.js` to handle the changing state of the checkbox and
  adjust the class of the `body` element accordingly.
- Add the respective frontend test in `dispatch.js`.

Co-authored-by: @MariaGkoulta <43913366+MariaGkoulta@users.noreply.github.com>

--- a/static/templates/settings/settings_checkbox.hbs
+++ b/static/templates/settings/settings_checkbox.hbs
@@ -2,7 +2,7 @@
 <div class="input-group {{#if is_nested}}disableable{{/if}}">
     <label class="checkbox">
         <input type="checkbox" class="inline-block setting-widget prop-element" name="{{setting_name}}" data-setting-widget-type="boolean"
-          id="{{prefix}}{{setting_name}}" {{#if is_checked}}checked="checked"{{/if}} />
+          id="{{prefix}}{{setting_name}}" {{#if has_theme_preference}}{{#if is_night_mode}}disabled{{/if}}{{/if}} {{#if is_checked}}checked="checked"{{/if}} />
         <span></span>
     </label>
     <label for="{{prefix}}{{setting_name}}" class="inline-block" id="{{prefix}}{{setting_name}}_label">
